--- a/react_calendar/calendar/package.json
+++ b/react_calendar/calendar/package.json
@@ -17,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +39,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "homepage": "https://alexstew14.github.io/",
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
