--- a/react_calendar/package.json
+++ b/react_calendar/package.json
@@ -13,5 +13,8 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "mongoose": "^5.12.8"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
