--- a/react_calendar/calendar/package.json
+++ b/react_calendar/calendar/package.json
@@ -17,9 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -39,9 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://alexstew14.github.io/",
-  "proxy": "http://localhost:5000",
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
-  }
+  "proxy": "http://localhost:5000"
 }
