--- a/react_calendar/package.json
+++ b/react_calendar/package.json
@@ -14,7 +14,5 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.8"
   },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
-  }
+  "devDependencies": {}
 }
